@@ -1,3 +1,8 @@
+2008-01-09  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/convmatrix.c (convolve_image): round the result
+	of the convolution. Fixes bug #508114.
+
 2008-01-09  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/core-types.h: add typedef GimpImageMapApplyFunc here.
